Fixed body overflow

--- a/styles/card.css
+++ b/styles/card.css
@@ -1,7 +1,7 @@
 .scene {
     position: relative;
     width: 100%;
-    height: 30vh;
+    height: 40vh;
     perspective: 600px;
 }
 
